# LoLAccountManager2

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: button.rs  data.rs  icons.rs  main.rs
src/gui/: account.rs  edit.rs  main.rs  mod.rs  popup.rs  settings.rs  setup.rs  theme.rs
src/gui/util/: indexed.rs  mod.rs  string_list.rs  vector.rs
src/gui/widgets/: button.rs  icons.rs  mod.rs  protected_textbox.rs
src/os/: mod.rs  windows.rs
src/screens/: account.rs  edit.rs  main.rs  mod.rs  popup.rs  settings.rs  setup.rs  start.rs
src/util/: indexed.rs  mod.rs  string_list.rs  theme.rs
src/widgets/: button.rs  icons.rs  mod.rs
