[package]
name = "lol_account_manager_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
anyhow = { version="1.0", features=["backtrace"] }
lazy_static = "1.4"
druid = { git = "https://github.com/linebender/druid", features = ["im", "raw-win-handle", "serde"]}
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery", features=["derive"] }
log = "0.4.17"
druid-material-icons = "0.1.0"
directories = "4.0"
pico-args = "0.5"
serde = { version="1.0", features=["derive"] }
serde_yaml = "0.9"
keyring = "1"
age = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["windef", "winerror"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[patch.'https://github.com/linebender/druid'.druid]
git = "https://github.com/sidit77/druid"
branch = "hacky-password-support"